src/tests/test-src/errors/E39-scalar-subscript.syntran
// E39: scalar-subscript
// A scalar variable was subscripted as if it were an array

let a = 5;
let b = a[0];
